--- a/index.html
+++ b/index.html
@@ -8,5 +8,14 @@
     <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
     <!-- define a camera which will move according to the marker position -->
     <a-marker-camera preset='hiro'></a-marker-camera>
+    <a-text value="Hello, World!"></a-text>
+    <a-image src="logo-xignux.png"></a-image> 
+
+    <!-- define your gltf asset -->
+    <a-assets>
+    <a-asset-item id="tree" src="sphere.gltf"></a-asset-item> </a-assets>
+    <!-- use your gltf model -->
+    <a-entity gltf-model="##tree"></a-entity>
+
   </a-scene>
 </body>
