gltf model test

--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
 
     <!-- define your gltf asset --> 
     <a-assets>
-    <a-asset-item id="tree" src="sphere.gltf"></a-asset-item> </a-assets> 
+    <a-asset-item id="tree" src="scene.gltf"></a-asset-item> </a-assets> 
+    <!--"Buster Drone" (https://skfb.ly/TBnX) by LaVADraGoN is licensed under Creative Commons Attribution-NonCommercial 
+    (http://creativecommons.org/licenses/by-nc/4.0/).--> 
+
     <!-- use your gltf model --> 
     <a-entity gltf-model="##tree"></a-entity>
     
