--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
 
     <!-- define your gltf asset --> 
     <a-assets>
-    <a-asset-item id="tree" src="Biomech_Mutant_Skin_1/Biomech_Mutant_Skin_1.gltf"></a-asset-item> </a-assets> 
+    <a-asset-item id="tree" src="Biomech_Mutant_Skin_1/Biomech_Mutant_Skin_1.gltf"></a-asset-item>
+    </a-assets> 
     <!--"Buster Drone" (https://skfb.ly/TBnX) by LaVADraGoN is licensed under Creative Commons Attribution-NonCommercial 
     (http://creativecommons.org/licenses/by-nc/4.0/).--> 
 
     <!-- use your gltf model --> 
-    <a-entity gltf-model="##tree"></a-entity>
+    <a-entity gltf-model="#tree" scale="0.01 0.01 0.01"></a-entity>
     
 
   </a-scene>
