--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     (http://creativecommons.org/licenses/by-nc/4.0/).--> 
 
     <!-- use your gltf model --> 
-    <a-entity gltf-model="tree" scale="0.01 0.01 0.01"></a-entity>
+    <a-entity gltf-model="#tree" position='0 0.5 0' scale="0.01 0.01 0.01"></a-entity>
     <!-- define a camera which will move according to the marker position -->
 
     <a-marker-camera preset='hiro'></a-marker-camera>
