--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     </a-plane>
     <a-sky color="#ECECEC"></a-sky>
   </a-scene>
+  
+  <a-sky color="#ECECEC" hide-in-ar-mode></a-sky>
+
+
 </head>
 <body>
   
