--- a/index.html
+++ b/index.html
@@ -18,11 +18,18 @@
     </a-cylinder>
     <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4">
     </a-plane>
-    <a-sky color="#ECECEC"></a-sky>
-  </a-scene>
-
-  <a-sky color="#ECECEC" hide-in-ar-mode></a-sky>
-
+    <a-sky color="#ECECEC"  hide-in-ar-mode></a-sky>
+    <a-plane
+    rotation="-90 0 0"
+    width="0.2"
+    height="0.2"
+    src="./arrow.png"
+    material="transparent:true;"
+   ></a-plane>
+   <a-entity ar-hit-test="doHitTest:false" visible="false">
+    Reticle HTML goes here ...
+    </a-entity>
+  </a-scene>  
 
 </head>
 <body>
