--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <script src="https://aframe.io/releases/1.1.0/aframe.min.js"></script>
 <script src="https://ada.is/basketball-demo/ar-components.js"></script>
 
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My AR Game</title>
-  <a-scene webxr="optionalFeatures: hit-test;">
+  <a-scene webxr="optionalFeatures: hit-test;" inspector="url: https://cdn.jsdelivr.net/gh/aframevr/aframe-inspector@master/dist/aframe-inspector.min.js">
     <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9">
     </a-box>
     <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E">
