--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     material="transparent:true;"
    ></a-plane>
    <a-entity ar-hit-test="doHitTest:false" visible="false">
-    Reticle HTML goes here ...
+    Reticle HTML goes here ....
     </a-entity>
   </a-scene>  
 
