--- a/index.html
+++ b/index.html
@@ -1,38 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<script src="https://aframe.io/releases/1.1.0/aframe.min.js"></script>
-<script src="https://ada.is/basketball-demo/ar-components.js"></script>
-
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My AR Game</title>
-  <a-scene webxr="optionalFeatures: hit-test;" inspector="url: https://cdn.jsdelivr.net/gh/aframevr/aframe-inspector@master/dist/aframe-inspector.min.js">
-    <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9">
-    </a-box>
-    <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E">
-    </a-sphere>
-    <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D">
-    </a-cylinder>
-    <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4">
-    </a-plane>
-    <a-sky color="#ECECEC"  hide-in-ar-mode></a-sky>
-    <a-plane
-    rotation="-90 0 0"
-    width="0.2"
-    height="0.2"
-    src="./arrow.png"
-    material="transparent:true;"
-   ></a-plane>
-   <a-entity ar-hit-test="doHitTest:false" visible="false">
-    Reticle HTML goes here ....
-    </a-entity>
-  </a-scene>  
-
-</head>
-<body>
-  
-</body>
-</html>
+<html lang="en">  
+  <head> 
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My AR Game</title> 
+    <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
+    <script src="https://ada.is/basketball-demo/ar-components.js"></script> 
+    <script src="https://unpkg.com/aframe-physics-system@1.6.0/dist/aframe-physics-system.min.js"></script>
+  </head> 
+  <body>  
+    <a-scene physicse webxr="optionalFeatures: hit-test;" inspector="url: https://cdn.jsdelivr.net/gh/aframevr/aframe-inspector@master/dist/aframe-inspector.min.js"> 
+      <a-sky color="#ECECEC"></a-sky>   
+      <a-box position="-1 4 -3" rotation="0 45 0" color="#4CC3D9" dynamic-body></a-box>
+      <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4" static-body></a-plane> 
+      <a-plane rotation="-90 0 0" width="0.2" height="0.2" src="./arrow.png" material="transparent:true;"></a-plane>
+      <a-entity ar-hit-test="doHitTest:false" visible="false"> Reticle HTML goes here .... </a-entity>
+    </a-scene>  
+  </body> 
+</html> 
