--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         radius="1.25"
         color="#EF2D5E"
         shadow
-        ammo-body
+        ammo-body="type: kinematic; addCollideEventListener: true; disableCollision: false;"
         ammo-shape="type: sphere;"
       ></a-sphere>
       <a-cone
