--- a/index.html
+++ b/index.html
@@ -1,58 +1,23 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">  
   <head> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My AR Game</title> 
     <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
-    <script src="https://unpkg.com/aframe-physics-system@1.6.0/dist/aframe-physics-system.min.js"></script>
+    <script src="https://unpkg.com/aframe-physics-system@1.6.0/dist/aframe-physics-system.min.js"></script> 
+    <!-- include ar.js for A-Frame -->
+    <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+
   </head> 
   <body>  
-    <a-scene physics webxr="optionalFeatures: hit-test;"> 
+    <a-scene embedded arjs physics webxr="optionalFeatures: hit-test;"> 
       <a-sky color="#ECECEC"></a-sky>   
       <a-box position="-1 4 -3" rotation="0 45 0" color="#4CC3D9" dynamic-body></a-box>
       <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4" static-body></a-plane>  
+
+      <!-- define a camera which will move according to the marker position -->
+      <a-marker-camera preset='hiro'></a-marker-camera>
     </a-scene>  
   </body> 
-</html>  -->
-
-<html>
-  <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no,user-scalable=no,maximum-scale=1">
-    <title>Examples • Compound</title>
-    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-    <script src="https://rawgit.com/feiss/aframe-environment-component/master/dist/aframe-environment-component.min.js"></script>
-    <script src="https://cdn.rawgit.com/donmccurdy/aframe-extras/v4.2.0/dist/components/sphere-collider.js"></script>
-    <script src="https://unpkg.com/aframe-physics-system@1.6.0/dist/aframe-physics-system.min.js"></script>  
-  </head>
-  <body>
-    <a-scene environment physics="debug: true;">
-      <!-- Player -->
-      <a-entity camera="userHeight: 1.6" look-controls wasd-controls position="0 0.1 0">
-        <a-entity cursor
-                  position="0 0 -0.5"
-                  geometry="primitive: circle; radius: 0.01; segments: 4;"
-                  material="color: #FF4444; shader: flat"></a-entity>
-      </a-entity>
-      <a-entity static-body="shape: sphere; sphereRadius: 0.02;" hand-controls="hand: left" sphere-collider="objects: [dynamic-body];" grab></a-entity>
-      <a-entity static-body="shape: sphere; sphereRadius: 0.02;" hand-controls="hand: right" sphere-collider="objects: [dynamic-body];" grab></a-entity>
-
-      <!-- Terrain -->
-      <a-box width="75" height="0.1" depth="75" static-body visible="false"></a-box>
-
-      <!-- Blocks -->
-      <a-sphere radius="0.25" position="0 4 -2" color="red"
-                body="type: dynamic; shape: none; mass: 5;"
-          shape__main="shape: cylinder;
-                       height: 0.36;
-                       radiusTop: 0.24;
-                       radiusBottom: 0.24;"
-          shape__handle="shape: box;
-                         halfExtents: 0.15 0.18 0.04;
-                         offset: 0.4 0 0;"
-      ></a-sphere>
-    </a-scene>
-  </body>
-</html>
+</html> 
