--- a/index.html
+++ b/index.html
@@ -8,16 +8,14 @@
     <script src="https://unpkg.com/aframe-physics-system@1.6.0/dist/aframe-physics-system.min.js"></script> 
     <!-- include ar.js for A-Frame -->
     <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
-
   </head> 
-  <body>  
-    <a-scene embedded arjs physics webxr="optionalFeatures: hit-test;"> 
-      <a-sky color="#ECECEC"></a-sky>   
-      <a-box position="-1 4 -3" rotation="0 45 0" color="#4CC3D9" dynamic-body></a-box>
-      <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4" static-body></a-plane>  
 
+  <body style='margin : 0px; overflow: hidden;'>
+    <a-scene embedded arjs>
+      <!-- create your content here. just a box for now -->
+      <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
       <!-- define a camera which will move according to the marker position -->
       <a-marker-camera preset='hiro'></a-marker-camera>
-    </a-scene>  
+    </a-scene>
   </body> 
 </html> 
