--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">  
+<html>  
   <head>  
     <title>My AR Game</title> 
     <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
@@ -7,12 +7,12 @@
     <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
   </head> 
 
-  <body style='margin : 0px; overflow: hidden;'>
+  <body>
     <a-scene embedded arjs> 
       <a-entity scale='.2 .2 .2'>
-      <a-entity gltf-model="tex.glb" scale='3 3 3' crossOrigin="anonymous"> 
-        </a-entity>
+      <a-entity gltf-model="tex.glb" scale='3 3 3' crossOrigin="anonymous"> </a-entity>
         <a-marker-camera preset='hiro'></a-marker-camera>
+      </a-entity>
     </a-scene>
   </body> 
 </html>   
