--- a/index.html
+++ b/index.html
@@ -23,11 +23,8 @@
     <script src="https://unpkg.com/aframe-extras@3.3.0/dist/aframe-extras.min.js"></script>
     <script src="https://unpkg.com/aframe-environment-component@1.1.0/dist/aframe-environment-component.min.js"></script>
     <!-- Other external scripts and meta tags can also be added. -->
-    <script src="https://mixedreality.mozilla.org/ammo.js/builds/ammo.wasm.js"></script>
-    
-    <script src="https://cdn.jsdelivr.net/gh/n5ro/aframe-physics-system@v$npm_package_version/dist/aframe-physics-system.min.js"></script>
-
-
+    <script src="https://mixedreality.mozilla.org/ammo.js/builds/ammo.wasm.js"></script> 
+    <script src="https://cdn.jsdelivr.net/gh/n5ro/aframe-physics-system@v$npm_package_version/dist/aframe-physics-system.min.js"></script> 
     <script>
       // Define a few custom components useful for AR mode. While these are somewhat reusable,
       // I recommend checking if there are officially supported alternatives before copying
@@ -49,7 +46,7 @@
         }
       });
 
-      import {selfDestructComponent, dropObjectComponent} from './components'
+      // import {selfDestructComponent, dropObjectComponent} from './components'
       AFRAME.registerComponent('self-destruct', selfDestructComponent)
       AFRAME.registerComponent('drop-object', dropObjectComponent)
       
@@ -81,7 +78,8 @@
         }
       });    
   </script>
-  </head>  
+  </head> 
+  
   <body>
 <!-- Copyright (c) 2020 8th Wall, Inc. -->
 
