--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
       });
 
       // import {selfDestructComponent, dropObjectComponent} from './components'
-      AFRAME.registerComponent('self-destruct', selfDestructComponent)
-      AFRAME.registerComponent('drop-object', dropObjectComponent)
+      // AFRAME.registerComponent('self-destruct', selfDestructComponent)
+      // AFRAME.registerComponent('drop-object', dropObjectComponent)
       
       AFRAME.registerComponent('ar-shadows', {
         // Swap an object's material to a transparent shadows-only material while
@@ -79,7 +79,7 @@
       });    
   </script>
   </head> 
-  
+
   <body>
 <!-- Copyright (c) 2020 8th Wall, Inc. -->
 
