--- a/index.html
+++ b/index.html
@@ -143,11 +143,11 @@
       </p>
     </div>
 
-    <script> 
+    <!-- <script> 
       document.getElementById('btn_full').onclick = setSize.bind(this, 1);
       document.getElementById('btn_half').onclick = setSize.bind(this, 0.5);
       document.getElementById('btn_quarter').onclick = setSize.bind(this, 0.25);
-    </script>
+    </script> -->
 
     <!-- include the Glitch button to show what the webpage is about and
           to make it easier for folks to view source and remix -->
