--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>XR Spinosaurus</title>
+    <title>Apple Raining</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">   
@@ -46,6 +46,9 @@
         }
       });
 
+      AFRAME.registerComponent('self-destruct', selfDestructComponent)
+      AFRAME.registerComponent('drop-object', dropObjectComponent)
+
       // import {selfDestructComponent, dropObjectComponent} from './components'
       // AFRAME.registerComponent('self-destruct', selfDestructComponent)
       // AFRAME.registerComponent('drop-object', dropObjectComponent)
@@ -76,8 +79,39 @@
             if (!this.wasVisible) this.el.setAttribute('visible', false);
           });
         }
-      });    
-  </script>
+      });     
+        const selfDestructComponent = {
+          init() {
+            setTimeout(() => {
+              this.el.parentNode.removeChild(this.el)
+            }, 2000)
+          },
+        }
+
+        const dropObjectComponent = {
+          init() {
+            const head = document.querySelector('xrextras-faceanchor')
+
+            setInterval(() => {
+              const headPos = head.object3D.position
+
+              this.el.insertAdjacentHTML('beforeend',
+                `
+                  <a-entity 
+                  position="${headPos.x} ${headPos.y + 1} ${headPos.z}"
+                  self-destruct
+                  scale="0.1 0.1 0.1"
+                  
+                  gltf-model="#apple"
+                  ammo-body="type: dynamic" 
+                  ammo-shape="type: sphere; fit: manual; sphereRadius: 0.07;"></a-entity>
+                `)
+            }, 2000)
+          },
+        }  
+</script>
+
+
   </head> 
 
   <body>
@@ -94,7 +128,7 @@
     <!-- Assets block loading of the scene until they are fetched. -->
     <a-assets>
       <a-asset-item id="apple" src="./assets/Models/apple.glb"></a-asset-item>
-      <a-asset-item id="head-occluder" src="./assets/Models/head-occluder.glb"></a-asset-item>
+      <a-asset-item id="head-occluder" src="./assets/Models/head-occluder.glb"></a-asset-item> 
     </a-assets>
     
     <a-camera position="0 1 2"></a-camera>
