--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
                 document.getElementById("startWebcamDiv").style.display = "none";
 
                 createUnityInstance(document.querySelector("#unity-canvas"), {
-                    dataUrl: "Build/Builds.data.gz",
-                    frameworkUrl: "Build/Builds.framework.js.gz",
-                    codeUrl: "Build/Builds.wasm.gz",
+                    dataUrl: "Build/Builds.data",
+                    frameworkUrl: "Build/Builds.framework.js",
+                    codeUrl: "Build/Builds.wasm",
                     streamingAssetsUrl: "StreamingAssets",
                     companyName: "DefaultCompany",
                     productName: "xinguxar",
